added final pages, food jpg, directions

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Odin Recipies</h1>
 
-   <a href="pizza.html">pizza</a>
+   <a href="pizza.html">Pizza</a>
+   <a href="Cake.html">Cake</a>
+   <a href="Pancakes.html">Pancakes</a>
+   <a href="Pasta.html">Pasta</a>
 </body>
 </html>
