--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,6 +8,47 @@
 <body>
 
     <h1>Pizza, my dudes</h1>
+   
+    <img src="./foodpics/pizza1.jpeg" alt="pizza with veggies">
+    <h2>Enjoy a delicious pizza with your choice of toppings</h2>
+    <p>Extra filling and the perfect comfort food. Easy to make with whatever's in your pantry.</p>
+   <h2>Ingredients for crust</h2>
+   <ul>
+    <li>Yeast</li>
+   <li>Sugar</li>
+   <li>Bread Flour</li>
+   <li>Olive oil</li>
+   <li>Salt</li></ul>
+   
+   <h2>Steps for dough</h2>
+   <ol><li>Let the Dough Come to Room Temperature
+    After you're finished mixing the ingredients, allow your dough to rest on the counter for about 5 minutes. This will allow the gluten to relax, making the dough much easier to stretch and shape.</li>
+<li>Prepare Your Surface With Oil
+    You might feel inclined to prep your workspace with a big handful of flour to prevent sticking. This is a helpful step with many kinds of dough. However, in this case, too much flour can make your pizza crust tough. Instead, rub your surface (and your hands) with a few tablespoons of olive oil and maybe a little bit of flour. This will prevent sticking, encourage a crispy texture, and ensure a gorgeous golden color.</li>
+<li>Shape the Dough
+    You have a few options when it comes to shaping the dough. Stretch it in the air, use a rolling pin, or pat it with your hands. No matter which method you choose, make sure not to overwork the dough. Working it too much will create a tough texture. When you're done, you should have an even circle that's about 10 to 12 inches wide and about ⅓-inch thick. If you get too thin, the crust may not be able to support the sauce and toppings.</li>
+</ol>
+<h2>ingredients for sauce and whatnot</h2>
+<ul>
+    <li>1 cup warm water</li>
+    <li>1 package of active dry yeast</li>
+    <li>2 1/2 cups of bread flour</li>
+    <li>2 tablespoons of olive oil</li>
+    <li>1 teaspoon of salt</li>
+</ul>
+
+<h2>Directions</h2>
+<ol>
+    <li>Gather all ingredients. Preheat oven to 450 degrees F (230 degrees C), and lightly grease a pizza pan.</li>
+    <li>Place warm water in a bowl; add yeast and sugar. Mix and let stand until creamy, about 10 minutes.</li>
+    <li>Add flour, oil, and salt to the yeast mixture; beat until smooth. You can do this by hand or use a stand mixer fitted with a dough hook to make it easier.</li>
+    <li>Let rest for 5 minutes.</li>
+    <li>Turn dough out onto a lightly floured surface and pat or roll into a 12-inch circle.</li>
+    <li>Transfer to the prepared pizza pan.</li>
+    <li>Spread crust with sauce and toppings of your choice.</li>
+    <li>Bake in the preheated oven until golden brown, 15 to 20 minutes. Remove from the oven and let cool for 5 minutes before serving.</li>
+</ol>
+    <a href="index.html">Home</a>
     
 </body>
 </html>
