--- a/recipes/index.html
+++ b/recipes/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipies</h1>
-
-   <a href="pizza.html">Pizza</a>
-   <a href="Cake.html">Cake</a>
-   <a href="Pancakes.html">Pancakes</a>
-   <a href="Pasta.html">Pasta</a>
+<ul>
+   <li><a href="pizza.html">Pizza</a></li>
+   <li></li><a href="Cake.html">Cake</a></li>
+   <li></li><a href="Pancakes.html">Pancakes</a></li>
+   <li></li><a href="Pasta.html">Pasta</a></li>
+</ul>
 </body>
 </html>
